test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_caret_as_letter_2.draco
proc a^a() void : a^a := a^a; corp;

proc main() void : a := 1; corp;


