test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_or_as_identifier.draco
int or;
 
proc main() void : a := 1; corp;
